# toy

./: CMakeLists.txt  demo.toy  test.toy
include/: AST.h  Parser.h
include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  LoweringPass.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceOpInterface.h  ShapeInferenceOpInterface.td  ShapeInferencePass.h
lib/: CMakeLists.txt
lib/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  Optimize.cpp  Optimize.td  ShapeInferencePass.cpp
src/: main.cc  toy.cpp
src/toy/: CMakeLists.txt  Dialect.cc  Dialect.cpp  LoweringPass.cc  MLIRGen.cc  RewritePatterns.cc  RewritePatterns.td  ShapeInferencePass.cc  Simplify.h
test/: affine_opt.mlir  reshape.toy  shape_infer.toy  transpose_transpose.toy
